deepcam/cori/src/run_scripts/slurm-2051966.out
Traceback (most recent call last):
  File "../train_hdf5_ddp.py", line 585, in <module>
    main(pargs)
  File "../train_hdf5_ddp.py", line 108, in main
    logger = mll.mlperf_logger(log_file, "deepcam", "Umbrella Corp.")
  File "/global/cscratch1/sd/mrowan/mlperf-deepcam/src/deepCam/utils/mlperf_log_utils.py", line 50, in __init__
    torch.distributed.barrier()
  File "/usr/common/software/pytorch/v1.6.0-gpu/lib/python3.7/site-packages/torch/distributed/distributed_c10d.py", line 1710, in barrier
    work = _default_pg.barrier()
RuntimeError: CUDA error: all CUDA-capable devices are busy or unavailable
srun: error: cgpu04: task 15: Exited with exit code 1
srun: Terminating job step 2051966.0
slurmstepd: error: *** STEP 2051966.0 ON cgpu01 CANCELLED AT 2021-07-02T21:54:47 ***
srun: error: cgpu01: task 0: Terminated
srun: error: cgpu04: tasks 8-12,14: Terminated
srun: error: cgpu10: tasks 29,31: Terminated
srun: error: cgpu16: tasks 48,52: Terminated
srun: error: cgpu18: tasks 56,58,60,62: Terminated
srun: error: cgpu15: task 46: Terminated
srun: error: cgpu01: tasks 1,3-7: Terminated
srun: error: cgpu15: tasks 40-42,44-45,47: Terminated
srun: error: cgpu16: tasks 49-51,54-55: Terminated
srun: error: cgpu10: tasks 25-28,30: Terminated
srun: error: cgpu18: tasks 59,61,63: Terminated
srun: error: cgpu13: tasks 32-34,36-39: Terminated
srun: error: cgpu10: task 24: Terminated
srun: error: cgpu18: task 57: Terminated
srun: error: cgpu15: task 43: Terminated
srun: error: cgpu01: task 2: Terminated
srun: error: cgpu13: task 35: Terminated
srun: error: cgpu16: task 53: Terminated
srun: error: cgpu04: task 13: Terminated
  File "../train_hdf5_ddp.py", line 259
    raise Exception(f'Requested {pargs.lr_warmup_steps} LR warmup steps '
                                            File "../train_hdf5_ddp.py", line 259
    raise Exception(f'Requested {pargs.lr_warmup_steps} LR warmup steps '
                                                                        ^
SyntaxError: invalid syntax
  File "../train_hdf5_ddp.py", line 259
    raise Exception(f'Requested {pargs.lr_warmup_steps} LR warmup steps '
                                                                        ^
SyntaxError: invalid syntax
                              ^
SyntaxError: invalid syntax
  File "../train_hdf5_ddp.py", line 259
    raise Exception(f'Requested {pargs.lr_warmup_steps} LR warmup steps '
                                                                        ^
SyntaxError: invalid syntax
  File "../train_hdf5_ddp.py", line 259
    raise Exception(f'Requested {pargs.lr_warmup_steps} LR warmup steps '
                                                                        ^
SyntaxError: invalid syntax
  File "../train_hdf5_ddp.py", line 259
    raise Exception(f'Requested {pargs.lr_warmup_steps} LR warmup steps '
                                                                        ^
SyntaxError: invalid syntax
  File "../train_hdf5_ddp.py", line 259
    raise Exception(f'Requested {pargs.lr_warmup_steps} LR warmup steps '
                                                                        ^
SyntaxError: invalid syntax
  File "../train_hdf5_ddp.py", line 259
    raise Exception(f'Requested {pargs.lr_warmup_steps} LR warmup steps '
                                                                        ^
SyntaxError: invalid syntax
srun: error: cgpu07: tasks 16-23: Exited with exit code 1
srun: Force Terminated job step 2051966.0
